# osha-compliance-assistant

./: README.md  api_wrapper.py  pyproject.toml  requirements.txt  server.py
data/: gold_standard.json  osha_2201_safety.txt  osha_context.txt
