[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "osha-compliance-assistant"
version = "1.0.0"
description = "MCP server for OSHA workplace safety compliance"
requires-python = ">=3.10"
dependencies = [
    "mcp>=0.9.0",
]

[project.scripts]
osha-mcp = "server:main"
